syntax = "proto3";

package com.road.yishi.proto.item;

message BottleMsg {
  repeated int32 playerBottle = 1;
  int32 total = 2;
  bool isNewRound = 3;
}
