syntax = "proto3";

package com.road.yishi.proto.item;

message BottleScoreMsg {
  string treeStatus = 1;
  int32 count = 2;
  bool openView = 3;
  bool alterBottle = 4;
}
